--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "lodash": "^4.17.11",
+    "react-select": "^2.1.2",
+    "react-test-renderer": "^16.7.0",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
