--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.2.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "lodash": "^4.17.11",
     "react-select": "^2.1.2",
     "react-test-renderer": "^16.7.0",
     "validator": "^10.11.0"
